// Copyright 2020-2022 Buf Technologies, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package buf.alpha.audit.v1alpha1;

enum BufAlphaRegistryV1Alpha1PluginVisibility {
  BUF_ALPHA_REGISTRY_V1_ALPHA1_PLUGIN_VISIBILITY_UNSPECIFIED = 0;
  BUF_ALPHA_REGISTRY_V1_ALPHA1_PLUGIN_VISIBILITY_PUBLIC = 1;
  BUF_ALPHA_REGISTRY_V1_ALPHA1_PLUGIN_VISIBILITY_PRIVATE = 2;
}

message BufAlphaRegistryV1Alpha1PluginVersionMapping {
  string plugin_owner = 1;
  string plugin_name = 2;
  string version = 3;
  bool deleted = 4;
}

message BufAlphaRegistryV1Alpha1PluginConfig {
  string plugin_owner = 1;
  string plugin_name = 2;
  repeated string parameters = 3;
  bool deleted = 4;
}

message BufAlphaRegistryV1Alpha1PluginVersionRuntimeLibrary {
  string name = 1;
  string version = 2;
}
